fix language switcher flicker

--- a/src/client/components/common/languageChanger.less
+++ b/src/client/components/common/languageChanger.less
@@ -18,6 +18,11 @@
   img {
     display: none;
   }
+  .sameLanguage {
+    text-decoration: underline;
+    color: black;
+    cursor: not-allowed;
+  }
 }
 
 .globe {
